# paper-reader

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
scripts/: fetch_metadata.py
tests/: test_metadata.py
