[project]
name = "paper-reader"
version = "1.0.0"
description = "Zero-dependency paper reading skill for AI coding agents"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
pdf = ["pdfplumber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
